[package]
name = "rvfs"
version = "0.1.0"
edition = "2021"
authors = ["Alex Yusiuk thepulticula@gmail.com"]
description = "Proxy VFS that focuses on forbitting access malwares"

[[bin]]
name = "rvfs"
path = "src/main.rs"

[dependencies]
fuser = "0.12.0"
tracing = { version = "0.1", default-features = false, features = ["default", "log", "attributes", "release_max_level_info"] }
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
libc = "0.2"
tempdir = "0.3.7"
anyhow = "1.0.70"
ctrlc = { version = "3.2.5", features = ["termination"] }
sys-mount = "2.1.0"
clamav-rs = { git = "https://github.com/kpcyrd/clamav-rs.git", branch = "clamav-1.0" }
pico-args = "0.5.0"

[patch.crates-io.loopdev]
git = "https://github.com/mulkieran/loopdev"
branch = "bump-bindgen-reduce-version"

[profile.release]
opt-level = 3
lto = true
debug = true
panic = "abort"
