[package]
name = "rvfs"
version = "0.1.0"
edition = "2021"
authors = ["Alex Yusiuk thepulticula@gmail.com"]
description = "Proxy VFS that focuses on forbitting access malwares"

[[bin]]
name = "rvfs"
path = "src/main.rs"

[dependencies]
fuser = { git = "https://github.com/RRRadicalEdward/fuser", branch = "optimizations" }
simplelog = "0.12.1"
log = "0.4.20"
libc = "0.2"
tempdir = "0.3.7"
anyhow = "1.0.70"
ctrlc = { version = "3.2.5", features = ["termination"] }
sys-mount = "2.1.0"
clamav-rs = { git = "https://github.com/kpcyrd/clamav-rs.git", branch = "clamav-1.0" }
petgraph = "0.6.4"
pico-args = "0.5.0"

[patch.crates-io.loopdev]
git = "https://github.com/mulkieran/loopdev"
branch = "bump-bindgen-reduce-version"

[profile.release]
opt-level = 3
lto = true
debug = true
panic = "abort"
