[package]
name = "rvfs"
version = "0.1.0"
edition = "2021"
authors = ["Alex Yusiuk thepulticula@gmail.com"]
description = "Proxy VFS that focuses on forbitting access malwares"

[[bin]]
name = "rvfs"
path = "src/main.rs"

[dependencies]
fuser = { git = "https://github.com/cberner/fuser.git" }
simplelog = "0.12"
log = "0.4"
libc = "0.2"
tempdir = "0.3"
anyhow = "1"
ctrlc = { version = "3.4", features = ["termination"] }
sys-mount = "2.1"
clamav-rs = { git = "https://github.com/kpcyrd/clamav-rs.git", branch = "clamav-1.2" }
petgraph = "0.6"
pico-args = "0.5"

[patch.crates-io.loopdev]
git = "https://github.com/mulkieran/loopdev"
branch = "bump-bindgen-reduce-version"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
